# Kiosk-scan

./: .gitignore  BUILD_EXE.md  CONFIGURATION_GUIDE.md  Option_Update.md  PROJECT_STRUCTURE.md  STARTUP_GUIDE.md  build_exe.py  config.json  create_shortcut.bat  data.json  frontend.rar  html.html  service.txt  start-backend.bat  start-frontend.bat  start-kiosk.bat  start_Backend_Only.bat  start_GUI.bat  start_GUI.vbs  start_Kiosk - Shortcut.lnk  start_Kiosk.bat  start_Kiosk.lnk  start_Kiosk.vbs  start_Kiosk_fixed.vbs  start_Kiosk_with_log.vbs  test_brightness_contrast.py  test_config_modes.py  test_debug.vbs  thêm-thành-phần.html  update_config.py  upload ảnh.text  upload-overlay-workflow.md
.qwen/: settings.json
Driver-V2-EP802-20190515/: EP802.INF  ep802.cat
Driver-V2-EP802-20190515/PrinterDriver32/: RMC800PrinterUI.ini
Driver-V2-EP802-20190515/PrinterDriver64/: RMC800Printer.gpd
GUI/: CMakeLists.txt  build-msys2.sh  build.bat
GUI/src/cli/: main.c
GUI/src/config/: config.c  config.h  rules.c  rules.h
GUI/src/core/: debug.c  debug.h  events.c  events.h  layout.c  layout.h  resize.c  resize.h  types.h  wm.c  wm.h  wm_internal.h
GUI/src/ipc/: ipc.c  ipc.h  ipc_ext.h  ipc_handlers.c  ipc_handlers.h
GUI/src/manager/: manager.c  manager.h
GUI/src/platform/: platform.h
GUI/src/platform/windows/: internal.h  platform.c
GUI/src/server/: main.c
GUI/src/utils/: file_utils.c  file_utils.h  list.h  logger.c  logger.h  math_utils.h  memory.h
backend/: README.md  benchmark_rotation.py  build.bat  build_simple.bat  config.json  config.py  debug_rotation.py  demo_opencv_rotation.py  image_processor.py  image_processor00.py  image_processor001.py  install_dependencies.bat  killchrome.py  main.py  main00.py  print_ticket.py  requirements.txt  start_kiosk.bat  start_kiosk.vbs  test_bg_removal.py  test_exe_config.py  test_imports.py  test_opencv_rotation.py  test_pdf_creation.py  train_worker.py  train_yolo.py
backend/train_dataset/: data.yaml
backend/train_dataset/labels/: train.cache  val.cache
backend/train_dataset/labels/train/: 0eccd836-0521-4a44-8e6e-682ef1a43a2c.txt  e2cc90b9-51a2-4a25-b6cd-69b1c57abad9.txt
backend/train_dataset/labels/val/: 2b24b888-ffbd-4a5c-8438-75dd9d303ced.txt
chrome-extension/: README.md  background.js  config.js  content.js  create-icons.js  iframe-autofill.js  manifest.json  popup.html  popup.js  sample-data.json  test-modules.html
chrome-extension/icons/: generate-icons.html  generate-icons.js
chrome-extension/modules/: component-workflow.js  dialog-handler.js  form-filler.js  loader.html  loader.js  overlay-handler.js  url-scanner.js
docs/: DIRECTORY_STRUCTURE.md  IMAGE_PROCESSING.md  LISTPDFS.md  STRUCTURE.md
frontend/: index.html  index1.html  index2.html  index3.html  index4.html  styles.css
frontend/js/: app.js  config.js
frontend/js/components/: Api.js  Camera.js  Capture.js  ImageList.js  Lightbox.js  Toast.js  imageProcessing.js
frontend/js/models/: ImageModel.js
gui/: main_window.py
